--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
         <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
         <script src="https://moment.github.io/luxon/global/luxon.min.js"></script>
+        <script src="https://unpkg.com/@mapbox/mapbox-sdk/umd/mapbox-sdk.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4.js"></script>
     </head>
     <body>
-        <div class="cursor-location-parent">
+        <!-- <div class="cursor-location-parent">
             <p>0 px, 0 px</p>
-        </div>
+        </div> -->
         <div class="main-grid-parent">
-                <h1>2103</h1>
+                <h1><img src="/images/04.02Blob.svg" class="logo"></img> <br> 2103</h1>
             <div>
                 <div id="sketch-holder">
                     <!-- p5js sketch is here -->
@@ -23,17 +25,19 @@
             <ul class="member-links">
                 <li class="Andreas" data-timezone="Europe/Zurich">
                     <a href="#">Andreas</a>
+                    <img src="/images/switzerlandflag.png" class="flag" alt="CH flag">
                     <output>00</output>
                     <output>00</output>
                 </li>
                 <li class="Sverre" data-timezone="Europe/Zurich">
                     <a href="#">Sverre</a>
+                    <img src="/images/netherlandsflag.png" class="flag" alt="NL flag">
                     <output>00</output>
                     <output>00</output>
                 </li>
             </ul>
         </div>
-        <footer>hello hey hi. contact info : <a href="#">two1zero3@icloud.com</a> </footer>
+        <footer>hello hey hi. contact info : <a href="mailto:two1zero3@icloud.com">two1zero3@icloud.com</a> </footer>
         <div class="cursors">
             <div></div>
         </div>
