--- a/main.html
+++ b/main.html
@@ -12,51 +12,162 @@
         <div class="item logo-container">
             <p>21<img src="/images/04.02Blob.svg" alt="2103 logo" class="logo-image">3</p>
         </div>
-        <a href="#">
+        <a href="https://www.youtube.com/watch?v=cjpl_qpZMeA">
             <article class="item">
-                <div class="title">Title</div>
+                <div class="title">DETO BLACK - THREE5ZERO</div>
                 <div class="thumbnail">
-                    <img src="images/switzerlandflag.png" alt="">
+                    <img src="images/yungeverything.jpeg" alt="deto black - yung everything album cover" loading="lazy">
                 </div>
-                <span class="description">this is a description</span>
+                <span class="description">production for artist Deto Black</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=WsxOw0mvqgc">
+            <article class="item">
+                <div class="title">ODUNSI (THE ENGINE) - FUJI 5000</div>
+                <div class="thumbnail">
+                    <img src="images/fuji5000.jpg" alt="odunsi the engine - fuji 5000 album cover" loading="lazy">
+                </div>
+                <span class="description">production for artist Odunsi (The Engine)</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=SOqQ8iQcHUc">
+            <article class="item">
+                <div class="title">ODUNSI (THE ENGINE) - HALF A TAB (FULL-LENGTH FILM)</div>
+                <div class="thumbnail">
+                    <img src="images/halfatab.jpg" alt="thumbnail of half a tab film" loading="lazy">
+                </div>
+                <span class="description">production for part of the score of the full length film</span>
             </article>
         </a>
         <a href="#">
             <article class="item">
-                <div class="title">Title</div>
+                <div class="title">PINKPANTHERESS - LAST VALENTINES (2AAB REMIX)</div>
                 <div class="thumbnail">
-                    <img src="images/UTMmap.png" alt="">
+                    <img src="images/pinkpantheressremix.jpeg" alt="pinkpantheress to hell with it remix's cover art" loading="lazy">
                 </div>
-                <span class="description">this is a description</span>
+                <span class="description">remix for PinkPantheress' debut project</span>
             </article>
         </a>
         <a href="#">
             <article class="item">
-                <div class="title">Title</div>
+                <div class="title">LIL GNAR - NO REASON FT. LIL KEED & YAK GOTTI (OFFICIAL MUSIC VIDEO)</div>
                 <div class="thumbnail">
-                    <img src="images/spiral64px.gif" alt="">
+                    <img src="images/keedgnar.png" alt="thumbnail of lil gnar - no reason music video" loading="lazy">
                 </div>
-                <span class="description">this is a description</span>
+                <span class="description">VFX for Lil Gnar, Lil Keed and Yak Gotti music video</span>
             </article>
         </a>
-        <a href="#">
+        <a href="https://www.youtube.com/watch?v=QR96Ink862M">
             <article class="item">
-                <div class="title">Title</div>
+                <div class="title">TYFONTAINE - 24/CAN'T MISS (MUSIC VIDEO)</div>
                 <div class="thumbnail">
-                    <img src="images/cdSpin64px.gif" alt="">
+                    <img src="images/24cantmiss.png" alt="thumbnail of tyfontaine - 24/can't miss music video" loading="lazy">
                 </div>
-                <span class="description">this is a description</span>
+                <span class="description">VFX for Ty Fontaine - 24/cant miss music video</span>
             </article>
         </a>
-        <a href="#">
+        <a href="https://www.youtube.com/watch?v=el4b-NCXYok&list=OLAK5uy_mpyFE0PppT9SPiKCxnj2Qp11wJPDQ7rOs">
             <article class="item">
-                <div class="title">Title</div>
+                <div class="title">YEAT - ALIVË</div>
                 <div class="thumbnail">
-                    <img src="images/04.02Blob.svg" alt="">
+                    <img src="images/yeatalive.png" alt="yeat - alivë cover art" loading="lazy">
                 </div>
-                <span class="description">this is a description</span>
+                <span class="description">production for 3 tracks off Yeat's album "alivë"</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=YxLbByyc_Cg">
+            <article class="item">
+                <div class="title">SKAIWATER - VETEMENTS</div>
+                <div class="thumbnail">
+                    <img src="images/skaiwatervetements.png" alt="skaiwater - vetements cover art" loading="lazy">
+                </div>
+                <span class="description">production for artist Skaiwater</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=fNZJ3eF1fm8">
+            <article class="item">
+                <div class="title">COCHISE - YESSIR</div>
+                <div class="thumbnail">
+                    <img src="images/cochiseyessir.png" alt="cochise - yessir cover art" loading="lazy">
+                </div>
+                <span class="description">production for artist Cochise</span>
+            </article>
+        </a>
+        <a href="https://open.spotify.com/album/1Lx0JYPF83CuDOb9CVxOE5">
+            <article class="item">
+                <div class="title">GUBBIMANE & 2AAB - TRASHPACK2020!</div>
+                <div class="thumbnail">
+                    <img src="images/trashpack2020.jpg" alt="gubbimane - trashpack2020! cover art" loading="lazy">
+                </div>
+                <span class="description">collaborative EP with artist Gubbimane</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=U6-bQaUdk2w">
+            <article class="item">
+                <div class="title">TOCHI BEDFORD - BENJIS (FT. ODUNSI)</div>
+                <div class="thumbnail">
+                    <img src="images/tochibenjis.jpeg" alt="tochi bedford - after eternity cover art" loading="lazy">
+                </div>
+                <span class="description">production for artist tochi bedford & odunsi (the engine)</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=23gbDic-F14">
+            <article class="item">
+                <div class="title">HXIKAI - NOWHERE 2 GO</div>
+                <div class="thumbnail">
+                    <img src="images/nowhere2go.jpeg" alt="HXIKAI - NOWHERE 2 GO cover art" loading="lazy">
+                </div>
+                <span class="description">production for artist hxikai with hiko momoji</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=SUgQoSoqi0U">
+            <article class="item">
+                <div class="title">NOVA & HIKO MOMOJI - PRICE PAID</div>
+                <div class="thumbnail">
+                    <img src="images/destinationunknown.jpeg" alt="nova & hiko momoji - destination unknown cover art" loading="lazy">
+                </div>
+                <span class="description">production for artist nova & hiko momoji</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=4tQeWt-Im5E">
+            <article class="item">
+                <div class="title">MOWALOLA TV - IMVU FASHION SHOW</div>
+                <div class="thumbnail">
+                    <img src="images/mowalolaimvu.jpg" alt="tochi bedford - after eternity cover art" loading="lazy">
+                </div>
+                <span class="description">mix for Mowalola IMVU fashion show</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=CkPT05Y8EGU">
+            <article class="item">
+                <div class="title">DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM</div>
+                <div class="thumbnail">
+                    <img src="images/mowalolagucci.jpg" alt="DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM youtube video thumbnail" loading="lazy">
+                </div>
+                <span class="description">production for Mowalola Guccifest soundtrack with Odunsi (The Engine) & Zachsrevenge</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=NY_7HBG7J8s">
+            <article class="item">
+                <div class="title">MAISON2500 - X2 MUCH DOPE</div>
+                <div class="thumbnail">
+                    <img src="images/x2muchdope.jpeg" alt="maison2500 - x2 much dope cover art" loading="lazy">
+                </div>
+                <span class="description">production for artist Maison2500</span>
+            </article>
+        </a>
+        <a href="https://www.youtube.com/watch?v=NY_7HBG7J8s">
+            <article class="item">
+                <div class="title">LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER)</div>
+                <div class="thumbnail">
+                    <img src="images/landoncubemaniac.jpg" alt="LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER) youtube video thumbnail" loading="lazy">
+                </div>
+                <span class="description">VFX for Landon Cube & Anthony Ortiz visualizer video</span>
             </article>
         </a>
     </section>
+    <footer>
+        <p>© 2022 - Andreas Abbaszadeh & Sverre Timmermans</p>
+    </footer>
 </body>
 </html>
