--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
             <article class="item">
                 <div class="title">DETO BLACK - THREE5ZERO</div>
                 <div class="thumbnail">
-                    <img src="images/yungeverything.jpeg" alt="deto black - yung everything album cover" loading="lazy">
+                    <img srcset="images/yungeverything.jpg" alt="deto black - yung everything album cover">
                 </div>
                 <span class="description">production for artist Deto Black</span>
             </article>
@@ -25,7 +25,7 @@
             <article class="item">
                 <div class="title">ODUNSI (THE ENGINE) - FUJI 5000</div>
                 <div class="thumbnail">
-                    <img src="images/fuji5000.jpg" alt="odunsi the engine - fuji 5000 album cover" loading="lazy">
+                    <img src="images/fuji5000.jpg" alt="odunsi the engine - fuji 5000 album cover">
                 </div>
                 <span class="description">production for artist Odunsi (The Engine)</span>
             </article>
@@ -34,7 +34,7 @@
             <article class="item">
                 <div class="title">ODUNSI (THE ENGINE) - HALF A TAB (FULL-LENGTH FILM)</div>
                 <div class="thumbnail">
-                    <img src="images/halfatab.jpg" alt="thumbnail of half a tab film" loading="lazy">
+                    <img src="images/halfatab.jpg" alt="thumbnail of half a tab film">
                 </div>
                 <span class="description">production for part of the score of the full length film</span>
             </article>
@@ -43,7 +43,7 @@
             <article class="item">
                 <div class="title">PINKPANTHERESS - LAST VALENTINES (2AAB REMIX)</div>
                 <div class="thumbnail">
-                    <img src="images/pinkpantheressremix.jpeg" alt="pinkpantheress to hell with it remix's cover art" loading="lazy">
+                    <img src="images/pinkpantheressremix.jpg" alt="pinkpantheress to hell with it remix's cover art">
                 </div>
                 <span class="description">remix for PinkPantheress' debut project</span>
             </article>
@@ -52,7 +52,7 @@
             <article class="item">
                 <div class="title">LIL GNAR - NO REASON FT. LIL KEED & YAK GOTTI (OFFICIAL MUSIC VIDEO)</div>
                 <div class="thumbnail">
-                    <img src="images/keedgnar.png" alt="thumbnail of lil gnar - no reason music video" loading="lazy">
+                    <img src="images/keedgnar.jpg" alt="thumbnail of lil gnar - no reason music video">
                 </div>
                 <span class="description">VFX for Lil Gnar, Lil Keed and Yak Gotti music video</span>
             </article>
@@ -61,7 +61,7 @@
             <article class="item">
                 <div class="title">TYFONTAINE - 24/CAN'T MISS (MUSIC VIDEO)</div>
                 <div class="thumbnail">
-                    <img src="images/24cantmiss.png" alt="thumbnail of tyfontaine - 24/can't miss music video" loading="lazy">
+                    <img src="images/24cantmiss.jpg" alt="thumbnail of tyfontaine - 24/can't miss music video">
                 </div>
                 <span class="description">VFX for Ty Fontaine - 24/cant miss music video</span>
             </article>
@@ -70,7 +70,7 @@
             <article class="item">
                 <div class="title">YEAT - ALIVË</div>
                 <div class="thumbnail">
-                    <img src="images/yeatalive.png" alt="yeat - alivë cover art" loading="lazy">
+                    <img src="images/yeatalive.jpg" alt="yeat - alivë cover art">
                 </div>
                 <span class="description">production for 3 tracks off Yeat's album "alivë"</span>
             </article>
@@ -79,7 +79,7 @@
             <article class="item">
                 <div class="title">SKAIWATER - VETEMENTS</div>
                 <div class="thumbnail">
-                    <img src="images/skaiwatervetements.png" alt="skaiwater - vetements cover art" loading="lazy">
+                    <img src="images/skaiwatervetements.jpg" alt="skaiwater - vetements cover art">
                 </div>
                 <span class="description">production for artist Skaiwater</span>
             </article>
@@ -88,7 +88,7 @@
             <article class="item">
                 <div class="title">COCHISE - YESSIR</div>
                 <div class="thumbnail">
-                    <img src="images/cochiseyessir.png" alt="cochise - yessir cover art" loading="lazy">
+                    <img src="images/cochiseyessir.jpg" alt="cochise - yessir cover art">
                 </div>
                 <span class="description">production for artist Cochise</span>
             </article>
@@ -97,7 +97,7 @@
             <article class="item">
                 <div class="title">GUBBIMANE & 2AAB - TRASHPACK2020!</div>
                 <div class="thumbnail">
-                    <img src="images/trashpack2020.jpg" alt="gubbimane - trashpack2020! cover art" loading="lazy">
+                    <img src="images/trashpack2020.jpg" alt="gubbimane - trashpack2020! cover art">
                 </div>
                 <span class="description">collaborative EP with artist Gubbimane</span>
             </article>
@@ -106,7 +106,7 @@
             <article class="item">
                 <div class="title">TOCHI BEDFORD - BENJIS (FT. ODUNSI)</div>
                 <div class="thumbnail">
-                    <img src="images/tochibenjis.jpeg" alt="tochi bedford - after eternity cover art" loading="lazy">
+                    <img src="images/tochibenjis.jpg" alt="tochi bedford - after eternity cover art">
                 </div>
                 <span class="description">production for artist tochi bedford & odunsi (the engine)</span>
             </article>
@@ -115,7 +115,7 @@
             <article class="item">
                 <div class="title">HXIKAI - NOWHERE 2 GO</div>
                 <div class="thumbnail">
-                    <img src="images/nowhere2go.jpeg" alt="HXIKAI - NOWHERE 2 GO cover art" loading="lazy">
+                    <img src="images/nowhere2go.jpg" alt="HXIKAI - NOWHERE 2 GO cover art">
                 </div>
                 <span class="description">production for artist hxikai with hiko momoji</span>
             </article>
@@ -124,7 +124,7 @@
             <article class="item">
                 <div class="title">NOVA & HIKO MOMOJI - PRICE PAID</div>
                 <div class="thumbnail">
-                    <img src="images/destinationunknown.jpeg" alt="nova & hiko momoji - destination unknown cover art" loading="lazy">
+                    <img src="images/destinationunknown.jpg" alt="nova & hiko momoji - destination unknown cover art">
                 </div>
                 <span class="description">production for artist nova & hiko momoji</span>
             </article>
@@ -133,7 +133,7 @@
             <article class="item">
                 <div class="title">MOWALOLA TV - IMVU FASHION SHOW</div>
                 <div class="thumbnail">
-                    <img src="images/mowalolaimvu.jpg" alt="tochi bedford - after eternity cover art" loading="lazy">
+                    <img src="images/mowalolaimvu.jpg" alt="tochi bedford - after eternity cover art">
                 </div>
                 <span class="description">mix for Mowalola IMVU fashion show</span>
             </article>
@@ -142,7 +142,7 @@
             <article class="item">
                 <div class="title">DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM</div>
                 <div class="thumbnail">
-                    <img src="images/mowalolagucci.jpg" alt="DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM youtube video thumbnail" loading="lazy">
+                    <img src="images/mowalolagucci.jpg" alt="DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM youtube video thumbnail">
                 </div>
                 <span class="description">production for Mowalola Guccifest soundtrack with Odunsi (The Engine) & Zachsrevenge</span>
             </article>
@@ -151,7 +151,7 @@
             <article class="item">
                 <div class="title">MAISON2500 - X2 MUCH DOPE</div>
                 <div class="thumbnail">
-                    <img src="images/x2muchdope.jpeg" alt="maison2500 - x2 much dope cover art" loading="lazy">
+                    <img src="images/x2muchdope.jpg" alt="maison2500 - x2 much dope cover art">
                 </div>
                 <span class="description">production for artist Maison2500</span>
             </article>
@@ -160,7 +160,7 @@
             <article class="item">
                 <div class="title">LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER)</div>
                 <div class="thumbnail">
-                    <img src="images/landoncubemaniac.jpg" alt="LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER) youtube video thumbnail" loading="lazy">
+                    <img src="images/landoncubemaniac.jpg" alt="LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER) youtube video thumbnail">
                 </div>
                 <span class="description">VFX for Landon Cube & Anthony Ortiz visualizer video</span>
             </article>
