update font + favicon

--- a/main.html
+++ b/main.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2103</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -14,7 +21,9 @@
         </div>
         <a href="https://www.youtube.com/watch?v=cjpl_qpZMeA">
             <article class="item">
-                <div class="title">DETO BLACK - THREE5ZERO</div>
+                <div class="title">
+                    <h2>DETO BLACK - THREE5ZERO</h2>
+                </div>
                 <div class="thumbnail">
                     <img srcset="images/yungeverything.jpg" alt="deto black - yung everything album cover">
                 </div>
@@ -23,7 +32,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=WsxOw0mvqgc">
             <article class="item">
-                <div class="title">ODUNSI (THE ENGINE) - FUJI 5000</div>
+                <div class="title">
+                    <h2>ODUNSI (THE ENGINE) - FUJI 5000</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/fuji5000.jpg" alt="odunsi the engine - fuji 5000 album cover">
                 </div>
@@ -32,7 +43,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=SOqQ8iQcHUc">
             <article class="item">
-                <div class="title">ODUNSI (THE ENGINE) - HALF A TAB (FULL-LENGTH FILM)</div>
+                <div class="title">
+                    <h2>ODUNSI (THE ENGINE) - HALF A TAB (FULL-LENGTH FILM)</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/halfatab.jpg" alt="thumbnail of half a tab film">
                 </div>
@@ -41,7 +54,9 @@
         </a>
         <a href="#">
             <article class="item">
-                <div class="title">PINKPANTHERESS - LAST VALENTINES (2AAB REMIX)</div>
+                <div class="title">
+                    <h2>PINKPANTHERESS - LAST VALENTINES (2AAB REMIX)</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/pinkpantheressremix.jpg" alt="pinkpantheress to hell with it remix's cover art">
                 </div>
@@ -50,7 +65,9 @@
         </a>
         <a href="#">
             <article class="item">
-                <div class="title">LIL GNAR - NO REASON FT. LIL KEED & YAK GOTTI (OFFICIAL MUSIC VIDEO)</div>
+                <div class="title">
+                    <h2>LIL GNAR - NO REASON FT. LIL KEED & YAK GOTTI (OFFICIAL MUSIC VIDEO)</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/keedgnar.jpg" alt="thumbnail of lil gnar - no reason music video">
                 </div>
@@ -59,7 +76,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=QR96Ink862M">
             <article class="item">
-                <div class="title">TYFONTAINE - 24/CAN'T MISS (MUSIC VIDEO)</div>
+                <div class="title">
+                    <h2>TYFONTAINE - 24/CAN'T MISS (MUSIC VIDEO)</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/24cantmiss.jpg" alt="thumbnail of tyfontaine - 24/can't miss music video">
                 </div>
@@ -68,7 +87,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=el4b-NCXYok&list=OLAK5uy_mpyFE0PppT9SPiKCxnj2Qp11wJPDQ7rOs">
             <article class="item">
-                <div class="title">YEAT - ALIVË</div>
+                <div class="title">
+                    <h2>YEAT - ALIVË</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/yeatalive.jpg" alt="yeat - alivë cover art">
                 </div>
@@ -77,7 +98,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=YxLbByyc_Cg">
             <article class="item">
-                <div class="title">SKAIWATER - VETEMENTS</div>
+                <div class="title">
+                    <h2>SKAIWATER - VETEMENTS</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/skaiwatervetements.jpg" alt="skaiwater - vetements cover art">
                 </div>
@@ -86,7 +109,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=fNZJ3eF1fm8">
             <article class="item">
-                <div class="title">COCHISE - YESSIR</div>
+                <div class="title">
+                    <h2>COCHISE - YESSIR</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/cochiseyessir.jpg" alt="cochise - yessir cover art">
                 </div>
@@ -95,7 +120,9 @@
         </a>
         <a href="https://open.spotify.com/album/1Lx0JYPF83CuDOb9CVxOE5">
             <article class="item">
-                <div class="title">GUBBIMANE & 2AAB - TRASHPACK2020!</div>
+                <div class="title">
+                    <h2>GUBBIMANE & 2AAB - TRASHPACK2020!</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/trashpack2020.jpg" alt="gubbimane - trashpack2020! cover art">
                 </div>
@@ -104,7 +131,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=U6-bQaUdk2w">
             <article class="item">
-                <div class="title">TOCHI BEDFORD - BENJIS (FT. ODUNSI)</div>
+                <div class="title">
+                    <h2>TOCHI BEDFORD - BENJIS (FT. ODUNSI)</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/tochibenjis.jpg" alt="tochi bedford - after eternity cover art">
                 </div>
@@ -113,7 +142,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=23gbDic-F14">
             <article class="item">
-                <div class="title">HXIKAI - NOWHERE 2 GO</div>
+                <div class="title">
+                    <h2>HXIKAI - NOWHERE 2 GO</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/nowhere2go.jpg" alt="HXIKAI - NOWHERE 2 GO cover art">
                 </div>
@@ -122,7 +153,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=SUgQoSoqi0U">
             <article class="item">
-                <div class="title">NOVA & HIKO MOMOJI - PRICE PAID</div>
+                <div class="title">
+                    <h2>NOVA & HIKO MOMOJI - PRICE PAID</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/destinationunknown.jpg" alt="nova & hiko momoji - destination unknown cover art">
                 </div>
@@ -131,7 +164,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=4tQeWt-Im5E">
             <article class="item">
-                <div class="title">MOWALOLA TV - IMVU FASHION SHOW</div>
+                <div class="title">
+                    <h2>MOWALOLA TV - IMVU FASHION SHOW</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/mowalolaimvu.jpg" alt="tochi bedford - after eternity cover art">
                 </div>
@@ -140,16 +175,20 @@
         </a>
         <a href="https://www.youtube.com/watch?v=CkPT05Y8EGU">
             <article class="item">
-                <div class="title">DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM</div>
+                <div class="title">
+                    <h2>DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/mowalolagucci.jpg" alt="DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM youtube video thumbnail">
                 </div>
-                <span class="description">production for Mowalola Guccifest soundtrack with Odunsi (The Engine) & Zachsrevenge</span>
+                <span class="description">production for Mowalola Guccifest soundtrack</span>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=NY_7HBG7J8s">
             <article class="item">
-                <div class="title">MAISON2500 - X2 MUCH DOPE</div>
+                <div class="title">
+                    <h2>MAISON2500 - X2 MUCH DOPE</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/x2muchdope.jpg" alt="maison2500 - x2 much dope cover art">
                 </div>
@@ -158,7 +197,9 @@
         </a>
         <a href="https://www.youtube.com/watch?v=NY_7HBG7J8s">
             <article class="item">
-                <div class="title">LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER)</div>
+                <div class="title">
+                    <h2>LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER)</h2>
+                </div>
                 <div class="thumbnail">
                     <img src="images/landoncubemaniac.jpg" alt="LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER) youtube video thumbnail">
                 </div>
