who did what indicator added

--- a/main.html
+++ b/main.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <header>
+        <div class="name-container">
+            <li id="andreas-nametag" >Andreas</li>
+            <li id="sverre-nametag">Sverre</li>
+        </div>
+    </header>
     <section class="section-wrapper">
         <div class="item logo-container">
             <span class="logo">21<img src="/images/04.02Blob.svg" alt="2103 logo" class="logo-image">3</span>
@@ -31,7 +37,7 @@
                 <div class="thumbnail">
                     <img src="images/keedgnar.jpg" alt="thumbnail of lil gnar - no reason music video">
                 </div>
-                <p class="description">VFX for Lil Gnar, Lil Keed and Yak Gotti music video</p>
+                <p class="description">🔴 VFX for Lil Gnar, Lil Keed and Yak Gotti music video</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=YzDPL7aMfC0" itemscope itemtype="https://schema.org/CreativeWork">
@@ -44,7 +50,7 @@
                 <div class="thumbnail">
                     <img src="images/pinkpantheressremix.jpg" alt="pinkpantheress to hell with it remix's cover art">
                 </div>
-                <p class="description">remix for PinkPantheress' debut project</p>
+                <p class="description">🔴 remix for PinkPantheress' debut project</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=SUgQoSoqi0U" itemscope itemtype="https://schema.org/CreativeWork">
@@ -57,7 +63,7 @@
                 <div class="thumbnail">
                     <img src="images/destinationunknown.jpg" alt="nova & hiko momoji - destination unknown cover art">
                 </div>
-                <p class="description">production for artist nova & hiko momoji</p>
+                <p class="description">🔵 production for artist nova & hiko momoji</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=QR96Ink862M" itemscope itemtype="https://schema.org/CreativeWork">
@@ -70,7 +76,7 @@
                 <div class="thumbnail">
                     <img src="images/24cantmiss.jpg" alt="thumbnail of tyfontaine - 24/can't miss music video">
                 </div>
-                <p class="description">VFX for Ty Fontaine - 24/cant miss music video</p>
+                <p class="description">🔴 VFX for Ty Fontaine - 24/cant miss music video</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=SOqQ8iQcHUc" itemscope itemtype="https://schema.org/CreativeWork">
@@ -83,7 +89,7 @@
                 <div class="thumbnail">
                     <img src="images/halfatab.jpg" alt="thumbnail of half a tab film">
                 </div>
-                <p class="description">production for part of the score of the full length film</p>
+                <p class="description">🔴 production for part of the score of the full length film</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=23gbDic-F14" itemscope itemtype="https://schema.org/CreativeWork">
@@ -96,7 +102,7 @@
                 <div class="thumbnail">
                     <img src="images/nowhere2go.jpg" alt="HXIKAI - NOWHERE 2 GO cover art">
                 </div>
-                <p class="description">production for artist hxikai with hiko momoji</p>
+                <p class="description">🔵 production for artist hxikai with hiko momoji</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=U6-bQaUdk2w" itemscope itemtype="https://schema.org/CreativeWork">
@@ -109,7 +115,7 @@
                 <div class="thumbnail">
                     <img src="images/tochibenjis.jpg" alt="tochi bedford - after eternity cover art">
                 </div>
-                <p class="description">production for artist tochi bedford & odunsi (the engine)</p>
+                <p class="description">🔵 production for artist tochi bedford & odunsi (the engine)</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=TgbtjV-ta9k" itemscope itemtype="https://schema.org/CreativeWork">
@@ -122,7 +128,7 @@
                 <div class="thumbnail">
                     <img src="images/landoncubemaniac.jpg" alt="LANDON CUBE, ANTHONY ORTIZ - MANIAC (OFFICIAL VISUALIZER) youtube video thumbnail">
                 </div>
-                <p class="description">VFX for Landon Cube & Anthony Ortiz visualizer video</p>
+                <p class="description">🔴 VFX for Landon Cube & Anthony Ortiz visualizer video</p>
             </article>
         </a>
         <a href="https://open.spotify.com/album/1Lx0JYPF83CuDOb9CVxOE5" itemscope itemtype="https://schema.org/CreativeWork">
@@ -135,7 +141,7 @@
                 <div class="thumbnail">
                     <img src="images/trashpack2020.jpg" alt="gubbimane - trashpack2020! cover art">
                 </div>
-                <p class="description">collaborative EP with artist Gubbimane</p>
+                <p class="description">🔴 collaborative EP with artist Gubbimane</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=cjpl_qpZMeA" itemscope itemtype="https://schema.org/CreativeWork">
@@ -148,7 +154,7 @@
                 <div class="thumbnail">
                     <img srcset="images/yungeverything.jpg" alt="deto black - yung everything album cover">
                 </div>
-                <p class="description">production for artist Deto Black</p>
+                <p class="description">🔵🔴 production for artist Deto Black</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=NY_7HBG7J8s" itemscope itemtype="https://schema.org/CreativeWork">
@@ -161,7 +167,7 @@
                 <div class="thumbnail">
                     <img src="images/x2muchdope.jpg" alt="maison2500 - x2 much dope cover art">
                 </div>
-                <p class="description">production for artist Maison2500</p>
+                <p class="description">🔴 production for artist Maison2500</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=4tQeWt-Im5E" itemscope itemtype="https://schema.org/CreativeWork">
@@ -174,7 +180,7 @@
                 <div class="thumbnail">
                     <img src="images/mowalolaimvu.jpg" alt="tochi bedford - after eternity cover art">
                 </div>
-                <p class="description">mix for Mowalola IMVU fashion show</p>
+                <p class="description">🔵 mix for Mowalola IMVU fashion show</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=YxLbByyc_Cg" itemscope itemtype="https://schema.org/CreativeWork">
@@ -187,7 +193,7 @@
                 <div class="thumbnail">
                     <img src="images/skaiwatervetements.jpg" alt="skaiwater - vetements cover art">
                 </div>
-                <p class="description">production for artist Skaiwater</p>
+                <p class="description">🔴 production for artist Skaiwater</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=el4b-NCXYok&list=OLAK5uy_mpyFE0PppT9SPiKCxnj2Qp11wJPDQ7rOs" itemscope itemtype="https://schema.org/CreativeWork">
@@ -200,7 +206,7 @@
                 <div class="thumbnail">
                     <img src="images/yeatalive.jpg" alt="yeat - alivë cover art">
                 </div>
-                <p class="description">production for 3 tracks off Yeat's album "alivë"</p>
+                <p class="description">🔴 production for 3 tracks off Yeat's album "alivë"</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=WsxOw0mvqgc" itemscope itemtype="https://schema.org/CreativeWork">
@@ -213,7 +219,7 @@
                 <div class="thumbnail">
                     <img src="images/fuji5000.jpg" alt="odunsi the engine - fuji 5000 album cover">
                 </div>
-                <p class="description">production for artist Odunsi (The Engine)</p>
+                <p class="description">🔴 production for artist Odunsi (The Engine)</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=CkPT05Y8EGU" itemscope itemtype="https://schema.org/CreativeWork">
@@ -226,7 +232,7 @@
                 <div class="thumbnail">
                     <img src="images/mowalolagucci.jpg" alt="DRIP CITY | MOWALOLA | GUCCIFEST EMERGING DESIGNER FASHION FILM youtube video thumbnail">
                 </div>
-                <p class="description">production for Mowalola Guccifest soundtrack with artist Odunsi (The Engine) and producer Zachsrevenge</p>
+                <p class="description">🔵 production for Mowalola Guccifest soundtrack with artist Odunsi (The Engine) and producer Zachsrevenge</p>
             </article>
         </a>
         <a href="https://www.youtube.com/watch?v=fNZJ3eF1fm8" itemscope itemtype="https://schema.org/CreativeWork">
@@ -239,12 +245,12 @@
                 <div class="thumbnail">
                     <img src="images/cochiseyessir.jpg" alt="cochise - yessir cover art">
                 </div>
-                <p class="description">production for artist Cochise</p>
+                <p class="description">🔴 production for artist Cochise</p>
             </article>
         </a>
     </section>
     <footer>
-        <p>© 2022 - Andreas Abbaszadeh & Sverre Timmermans</p>
+        <p>© 2022 - two1zero3</p>
     </footer>
 </body>
 </html>
