--- a/main.html
+++ b/main.html
@@ -252,5 +252,7 @@
     <footer>
         <p>© 2022 - two1zero3</p>
     </footer>
+    <script src="dates.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
