--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h2>ODUNSI (THE ENGINE) - WTF! (EUPHORIA) (FT. 2AAB)</h2>
                 </div>
                 <div class="thumbnail">
-                    <img src="images/maseverse.jpg" alt="thumbnail of odunsi - denim EP">
+                    <img src="images/denimEP.jpg" alt="thumbnail of odunsi - denim EP">
                 </div>
                 <p class="description two1zero3-andreas">Production on Odunsi (the Engine)'s Denim EP</p>
             </article>
