--- a/AiDJ/index.html
+++ b/AiDJ/index.html
@@ -16,5 +16,6 @@
     <script src="./p5.sound.js"></script>
     <script src="./main.js"></script>
     <script src="./musicTrack.js"></script>
+    <script src="./soundcloudDownloader.js"></script>
 </body>
 </html>
