--- a/AiDJ/index.html
+++ b/AiDJ/index.html
@@ -7,6 +7,8 @@
     <title>AiDJ</title>
     <script src="./p5.js"></script>
     <script src="./p5.clickable.js"></script>
+    <script src="https://unpkg.com/crunker@latest/dist/crunker.js"></script>
+    <script src="https://www.unpkg.com/m3u8-file-parser@0.2.4/dist/m3u8-file-parser.min.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
