--- a/AiDJ/index.html
+++ b/AiDJ/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>AiDJ</title>
     <script src="./p5.js"></script>
     <script src="./p5.clickable.js"></script>
     <script src="https://unpkg.com/crunker@latest/dist/crunker.js"></script>
     <script src="https://www.unpkg.com/m3u8-file-parser@0.2.4/dist/m3u8-file-parser.min.js"></script>
+    <script src="./p5.sound.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <main id="p5Elements">
         <div id="Canvas" style="grid-area: Canvas;"></div>
     </main>
-    <script src="./p5.sound.js"></script>
     <script src="./main.js"></script>
     <script src="./musicTrack.js"></script>
     <script src="./soundcloudDownloader.js"></script>
