--- a/AiDJ/prototype.html
+++ b/AiDJ/prototype.html
@@ -102,7 +102,7 @@
             </div>
         </div>
     </main>
-    <div class="addsong fade-in">
+    <div class="addsong hidden">
         <div class="addsong-container">
             <div class="addsong-searchbar-container">
                 <input type="search" placeholder="search anything" name="" id="addsong-searchbar" size="15">
