--- a/hyper/index.html
+++ b/hyper/index.html
@@ -13,6 +13,6 @@
     <div class="title">
         <h1 id="title-text" class="unselectable">HYPER</h1>
     </div>
-    <script src="/scripts/title.js"></script>
+    <script src="./scripts/title.js"></script>
 </body>
 </html>
