--- a/hyper/receive.html
+++ b/hyper/receive.html
@@ -33,10 +33,10 @@
         </div>
         <button class="submit-button">sendit!</button>
     </div>
-    <script src="scripts/cursorClass.js"></script>
-    <script src="scripts/informationClass.js"></script>
-    <script src="scripts/spotifyInfo.js"></script>
-    <script src="scripts/urlCodex.js"></script>
-    <script src="scripts/mainReceive.js"></script>
+    <script src="./scripts/cursorClass.js"></script>
+    <script src="./scripts/informationClass.js"></script>
+    <script src="./scripts/spotifyInfo.js"></script>
+    <script src="./scripts/urlCodex.js"></script>
+    <script src="./scripts/mainReceive.js"></script>
 </body>
 </html>
