--- a/hyper/sendit.html
+++ b/hyper/sendit.html
@@ -13,6 +13,6 @@
     <div class="sendit-container">
         <a id="link-to-send" href="#">click to copy me :)</a>
     </div>
-    <script src="scripts/sendIt.js"></script>
+    <script src="./scripts/sendIt.js"></script>
 </body>
 </html>
