--- a/hyper/submit.html
+++ b/hyper/submit.html
@@ -31,10 +31,10 @@
         </div>
         <button class="submit-button">sendit!</button>
     </div>
-    <script src="scripts/cursorClass.js"></script>
-    <script src="scripts/informationClass.js"></script>
-    <script src="scripts/spotifyInfo.js"></script>
-    <script src="scripts/mainSubmit.js"></script>
-    <script src="scripts/urlCodex.js"></script>
+    <script src="./scripts/cursorClass.js"></script>
+    <script src="./scripts/informationClass.js"></script>
+    <script src="./scripts/spotifyInfo.js"></script>
+    <script src="./scripts/mainSubmit.js"></script>
+    <script src="./scripts/urlCodex.js"></script>
 </body>
 </html>
