--- a/hyper/receive.html
+++ b/hyper/receive.html
@@ -14,7 +14,7 @@
     <div class="form">
         <h1 id="title-text" class="unselectable">HYPER</h1>
         <div class="images-container"> <!-- images go here --></div>
-        <img src="/assets/AlbumCoverPlaceholder.png" alt="cover art" id="cover-art" class="unselectable">
+        <img src="./assets/AlbumCoverPlaceholder.png" alt="cover art" id="cover-art" class="unselectable">
         <div class="spotify-search-container">
             <label id="track-name" for="spotify-search" style="color: grey">artist - title</label>
             <div class="spotify-input">
