--- a/hyper/submit.html
+++ b/hyper/submit.html
@@ -13,7 +13,7 @@
     <div id="canvas-container"></div>
     <div class="form">
         <h1 id="title-text" class="unselectable">HYPER</h1>
-        <img src="/assets/AlbumCoverPlaceholder.png" alt="cover art" id="cover-art" class="unselectable">
+        <img src="./assets/AlbumCoverPlaceholder.png" alt="cover art" id="cover-art" class="unselectable">
         <div class="spotify-search-container">
             <label id="track-name" for="spotify-search" style="color: grey">artist - title</label>
             <div class="spotify-input">
