make it work on iOS

--- a/webcam/index.html
+++ b/webcam/index.html
@@ -10,6 +10,8 @@
     </head>
     <body>
         <div id="canvas-container"></div>
+        <div id="interface-container">
+        </div>
         <script src="p5project.js"></script>
         <script src="imageFrameClass.js"></script>
     </body>
